Fixes some issues with scrolling on mobile

--- a/src/main.css
+++ b/src/main.css
@@ -14,9 +14,17 @@ html, body {
   overflow: auto;
 }
 
+.ca-app {
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  width: 100vw;
+  overflow-x: hidden;
+}
 
 .ca-box-control-panel {
-  position: fixed;
+  position: absolute;
   z-index: 50;
   right: 20px;
   bottom: 20px;
@@ -72,7 +80,7 @@ Text area
   top: 0;
   left: 0;
   right: 0;
-  min-height: 100vh;
+  min-height: 100%;
 }
 
 .ca-canvas__dragging {
@@ -237,7 +245,6 @@ Edit Overlay
   resize: none;
   overflow: hidden;
 }
-
 .ca-editOverlay_close {
   position: fixed;
   top: 20px;
@@ -277,3 +284,19 @@ Edit Overlay
     transform: perspective(600px) rotateX(0deg) translate3d(0, 0, 0);
   }
 }
+
+@media (max-width: 800px) { 
+  .ca-editOverlay_paper {
+    margin: 10px auto;
+    max-width: calc(100% - 60px);
+  }
+
+  .ca-editOverlay_paper > textarea {
+    padding: 60px 20px 20px 20px;
+  }
+
+  .ca-editOverlay_close {
+    right: 60px;
+  }
+}
+
